# call-center-synthesis

./: .env  .gitignore  DETAILED_PRD.md  debug_windows_audio_combination.py  gender-based-voice-selection.patch  pyproject.toml  requirements.txt  test_gender_detection.py
app/: main.py  models.py
app/services/: audio_generator.py  transcript_generator.py
contoso-call-center-frontend/src/: App.tsx
generated_transcripts/: contoso_call_20250626_180641_call_1.txt  contoso_call_20250626_180649_call_2.txt  contoso_call_20250626_180656_call_3.txt  contoso_call_20250626_180702_call_4.txt  contoso_call_20250626_180709_call_5.txt  contoso_call_20250626_182010_call_1.txt  contoso_call_20250626_182010_call_2.txt  contoso_call_20250626_182010_call_3.txt  contoso_call_20250626_182010_call_4.txt  contoso_call_20250626_182010_call_5.txt  contoso_call_20250626_182315_call_1.txt  contoso_call_20250626_182329_call_2.txt  contoso_call_20250626_182342_call_3.txt  contoso_call_20250626_182355_call_4.txt  contoso_call_20250626_182405_call_5.txt
